# Graphics-Assignment-Submission-Group5

./: README.md
Assignment2/: mainwindow.cpp  mainwindow.h  mainwindow.ui
Assignment4/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  my_label.cpp  my_label.h
Assignment5/: mainwindow.cpp  mainwindow.h  mainwindow.ui  my_label.cpp  my_label.h  transformation.pro
